--- a/ProyectoBses/src/InicioSesion.fxml
+++ b/ProyectoBses/src/InicioSesion.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -21,15 +25,42 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField layoutX="294.0" layoutY="165.0" />
-      <TextField layoutX="294.0" layoutY="227.0" />
-      <ChoiceBox layoutX="294.0" layoutY="287.0" prefWidth="150.0" />
+      <TextField id="txtUser" layoutX="294.0" layoutY="165.0">
+         <stylesheets>
+            <URL value="@resources/bootstrap2.css" />
+            <URL value="@resources/bootstrap3.css" />
+         </stylesheets></TextField>
+      <TextField id="txtContra" layoutX="294.0" layoutY="227.0" prefHeight="30.0" prefWidth="151.0" />
+      <ChoiceBox id="choEmpl" layoutX="294.0" layoutY="287.0" prefHeight="30.0" prefWidth="151.0">
+         <effect>
+            <Lighting>
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect></ChoiceBox>
       <Label layoutX="96.0" layoutY="277.0" prefHeight="46.0" prefWidth="127.0" text="Empleado:">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Button layoutX="271.0" layoutY="344.0" mnemonicParsing="false" text="Ingresar" />
+      <Button id="btnIngreso" layoutX="249.0" layoutY="340.0" mnemonicParsing="false" text="Ingresar">
+         <effect>
+            <Lighting>
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant />
+               </light>
+            </Lighting>
+         </effect>
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font></Button>
       <ImageView fitHeight="114.0" fitWidth="200.0" layoutX="194.0" layoutY="14.0">
          <image>
             <Image url="@../../../../Desktop/Sin%20título.png" />
