Cambios Previos a la creacion de funciones
Se agregaron los eventos a cada boton, ademas del reparo de ciertos bugs en el enlace entre las ventanas.
Falta conexion de queries y demas.

--- a/ProyectoBses/src/InicioSesion.fxml
+++ b/ProyectoBses/src/InicioSesion.fxml
@@ -8,12 +8,10 @@
 <?import javafx.scene.effect.Light.Distant?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.effect.Shadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller=".InicioSesionController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InicioSesionController">
    <children>
       <Label layoutX="96.0" layoutY="154.0" prefHeight="46.0" prefWidth="127.0" text="Usuario:">
          <font>
@@ -47,24 +45,6 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Button fx:id="btnIngreso" layoutX="249.0" layoutY="340.0" mnemonicParsing="false" onAction="#ingresar" text="Ingresar">
-         <effect>
-            <Lighting>
-               <bumpInput>
-                  <Shadow />
-               </bumpInput>
-               <light>
-                  <Light.Distant />
-               </light>
-            </Lighting>
-         </effect>
-         <font>
-            <Font name="System Bold" size="17.0" />
-         </font></Button>
-      <ImageView fitHeight="114.0" fitWidth="200.0" layoutX="194.0" layoutY="14.0">
-         <image>
-            <Image url="@../../../../Desktop/Sin%20título.png" />
-         </image>
-      </ImageView>
+      <Button fx:id="btnIngreso" layoutX="249.0" layoutY="341.0" mnemonicParsing="false" onAction="#ingresar" prefHeight="37.0" prefWidth="91.0" text="Ingresar" />
    </children>
 </AnchorPane>
