--- a/ProyectoBses/src/espol/edu/ec/gui/fxml/Factura.fxml
+++ b/ProyectoBses/src/espol/edu/ec/gui/fxml/Factura.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="AnchorPane" prefHeight="632.0" prefWidth="608.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller=".FacturaController">
+<AnchorPane id="AnchorPane" prefHeight="632.0" prefWidth="608.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.FacturaController">
    <children>
       <Pane prefHeight="568.0" prefWidth="608.0">
          <children>
