--- a/ProyectoBses/src/espol/edu/ec/gui/fxml/InicioSesion.fxml
+++ b/ProyectoBses/src/espol/edu/ec/gui/fxml/InicioSesion.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InicioSesionController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.InicioSesionController">
    <children>
       <Label layoutX="96.0" layoutY="154.0" prefHeight="46.0" prefWidth="127.0" text="Usuario:">
          <font>
