--- a/ProyectoBses/src/espol/edu/ec/gui/fxml/VentanaRecepcionista.fxml
+++ b/ProyectoBses/src/espol/edu/ec/gui/fxml/VentanaRecepcionista.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="787.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VentanaRecepcionistaController">
+<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="787.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="espol.edu.ec.gui.controller.VentanaRecepcionistaController">
    <children>
       <TabPane layoutY="52.0" prefHeight="491.0" prefWidth="787.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
