Auto stash before merge of "master" and "origin/master"

--- a/ProyectoBses/src/espol/edu/ec/gui/fxml/VentanaRecepcionista.fxml
+++ b/ProyectoBses/src/espol/edu/ec/gui/fxml/VentanaRecepcionista.fxml
@@ -135,25 +135,38 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Label layoutX="14.0" layoutY="39.0" prefHeight="29.0" prefWidth="188.0" text="Nombre:">
+                        <TextField fx:id="txtPrecio" layoutX="164.0" layoutY="256.0" prefHeight="25.0" prefWidth="399.0" />
+                        <Button fx:id="nuevaMembresia" layoutX="334.0" layoutY="423.0" mnemonicParsing="false" onAction="#ingresoMembresia" text="Ingresar" />
+                        <TextField fx:id="txtBusquedaMembresia" layoutX="201.0" layoutY="54.0" />
+                        <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="116.0" text="BUSQUEDA" />
+                        <ChoiceBox fx:id="comboBusquedaMembresia" layoutX="14.0" layoutY="54.0" prefWidth="150.0" />
+                        <Button fx:id="btnBuscar1" layoutX="393.0" layoutY="51.0" mnemonicParsing="false" onAction="#buscarMembresia" prefHeight="25.0" prefWidth="98.0" text="Buscar">
                            <font>
                               <Font size="15.0" />
                            </font>
-                        </Label>
-                        <Label layoutX="14.0" layoutY="141.0" prefHeight="29.0" prefWidth="188.0" text="Precio:">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="14.0" layoutY="94.0" prefHeight="29.0" prefWidth="188.0" text="Duración:">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="txtNombreMembresia" layoutX="158.0" layoutY="41.0" prefHeight="25.0" prefWidth="399.0" />
-                        <TextField fx:id="txtDuracion" layoutX="158.0" layoutY="96.0" prefHeight="25.0" prefWidth="399.0" />
-                        <TextField fx:id="txtPrecio" layoutX="158.0" layoutY="143.0" prefHeight="25.0" prefWidth="399.0" />
-                        <Button fx:id="nuevaMembresia" layoutX="364.0" layoutY="206.0" mnemonicParsing="false" onAction="#ingresoMembresia" text="Ingresar" />
+                           <effect>
+                              <Lighting>
+                                 <bumpInput>
+                                    <Shadow />
+                                 </bumpInput>
+                                 <light>
+                                    <Light.Distant />
+                                 </light>
+                              </Lighting>
+                           </effect>
+                        </Button>
+                        <TableView fx:id="tableNuevaMembresia" layoutX="-1.0" layoutY="92.0" onKeyPressed="#seleccionObjeto" prefHeight="200.0" prefWidth="787.0">
+                          <columns>
+                            <TableColumn prefWidth="178.0" text="Cedula" />
+                            <TableColumn prefWidth="170.0" text="Nombre" />
+                              <TableColumn prefWidth="225.0" text="Apellidos" />
+                              <TableColumn prefWidth="212.0" text="Telefono" />
+                          </columns>
+                        </TableView>
+                        <Label fx:id="lblTipo" layoutX="23.0" layoutY="312.0" prefHeight="25.0" prefWidth="79.0" text="TIPO" />
+                        <ChoiceBox fx:id="choTipo" layoutX="184.0" layoutY="312.0" prefWidth="150.0" />
+                        <ChoiceBox fx:id="choFormaPago" layoutX="184.0" layoutY="362.0" prefWidth="150.0" />
+                        <Label fx:id="lblPago" layoutX="23.0" layoutY="362.0" prefHeight="25.0" prefWidth="118.0" text="FORMA DE PAGO" />
                      </children>
                   </AnchorPane>
                </content>
