--- a/ProyectoBses/src/espol/edu/ec/gui/fxml/Reportes.fxml
+++ b/ProyectoBses/src/espol/edu/ec/gui/fxml/Reportes.fxml
@@ -157,7 +157,7 @@
                         <TextField fx:id="txtBuscarAsignar" layoutX="195.0" layoutY="54.0" />
                         <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="116.0" text="BUSQUEDA" />
                         <ChoiceBox fx:id="choBusquedaAsignar" layoutX="25.0" layoutY="54.0" prefWidth="150.0" />
-                        <Pane layoutX="6.0" layoutY="276.0" prefHeight="240.0" prefWidth="774.0">
+                        <Pane fx:id="paneAsignarEmpleo" layoutX="6.0" layoutY="276.0" prefHeight="240.0" prefWidth="774.0">
                            <children>
                               <Label alignment="CENTER" layoutX="322.0" layoutY="14.0" prefHeight="17.0" prefWidth="131.0" text="Asignar Cargo" />
                               <Label layoutX="46.0" layoutY="84.0" prefHeight="26.0" prefWidth="144.0" text="Sueldo:" />
@@ -220,21 +220,13 @@
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="520.0" prefWidth="150.0">
                                  <children>
-                                    <Label fx:id="lblNuevoInsumo" layoutX="7.0" layoutY="14.0" onDragDetected="#ventanaNuevoInsumo" prefHeight="44.0" prefWidth="222.0" text="NUEVO INSUMO" />
-                                    <Label fx:id="lblModificarInsumo" layoutX="6.0" layoutY="58.0" onDragDetected="#ventanaModificarInsumo" prefHeight="44.0" prefWidth="215.0" text="MODIFICAR INSUMO" />
+                                    <Label fx:id="lblNuevoInsumo" layoutX="7.0" layoutY="14.0" onMouseClicked="#ventanaNuevoInsumo" prefHeight="44.0" prefWidth="222.0" text="NUEVO INSUMO" />
+                                    <Label fx:id="lblModificarInsumo" layoutX="6.0" layoutY="58.0" onMouseClicked="#ventanaModificarInsumo" prefHeight="44.0" prefWidth="215.0" text="MODIFICAR INSUMO" />
                                  </children>
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="437.0" prefWidth="572.0">
                                  <children>
-                                    <Label layoutX="31.0" layoutY="286.0" prefHeight="29.0" prefWidth="111.0" text="Nombre:" />
-                                    <Label layoutX="31.0" layoutY="345.0" prefHeight="29.0" prefWidth="111.0" text="Descripción:" />
-                                    <Label layoutX="31.0" layoutY="316.0" prefHeight="29.0" prefWidth="111.0" text="Precio:" />
-                                    <TextField fx:id="txtID" layoutX="140.0" layoutY="263.0" prefHeight="25.0" prefWidth="368.0" />
-                                    <TextField fx:id="txtInsumosName" layoutX="139.0" layoutY="288.0" prefHeight="25.0" prefWidth="368.0" />
-                                    <Label layoutX="28.0" layoutY="261.0" prefHeight="29.0" prefWidth="111.0" text="ID" />
-                                    <TextField fx:id="txtPrecioInsumos" layoutX="139.0" layoutY="318.0" prefHeight="25.0" prefWidth="368.0" />
-                                    <TextArea fx:id="txtDescripcionInsumos" layoutX="140.0" layoutY="345.0" prefHeight="122.0" prefWidth="368.0" />
-                                    <Button fx:id="btnModificar" layoutX="337.0" layoutY="481.0" mnemonicParsing="false" onAction="#modificarInsumo" prefHeight="25.0" prefWidth="69.0" text="Modificar" />
+                                    <Button fx:id="btnModificar" layoutX="256.0" layoutY="481.0" mnemonicParsing="false" onAction="#modificarInsumo" prefHeight="25.0" prefWidth="69.0" text="Modificar" />
                                     <TextField fx:id="txtBuscarInsumo" layoutX="188.0" layoutY="26.0" />
                                     <Label alignment="CENTER" layoutX="28.0" layoutY="1.0" prefHeight="26.0" prefWidth="116.0" text="BUSQUEDA" />
                                     <ChoiceBox fx:id="choModInsumo" layoutX="28.0" layoutY="26.0" prefWidth="150.0" />
@@ -246,7 +238,19 @@
                                           <TableColumn prefWidth="187.0" text="PRECIO" />
                                       </columns>
                                     </TableView>
-                                    <Button fx:id="btnNuevo" layoutX="268.0" layoutY="481.0" mnemonicParsing="false" onAction="#agregarNuevoInsumo" prefHeight="25.0" prefWidth="69.0" text="Nuevo" />
+                                    <Button fx:id="btnNuevo" layoutX="256.0" layoutY="481.0" mnemonicParsing="false" onAction="#agregarNuevoInsumo" prefHeight="25.0" prefWidth="69.0" text="Nuevo" />
+                                    <AnchorPane fx:id="paneInsumo" layoutX="3.0" layoutY="248.0" prefHeight="229.0" prefWidth="579.0">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="39.0" prefHeight="29.0" prefWidth="111.0" text="Nombre:" />
+                                          <Label layoutX="14.0" layoutY="109.0" prefHeight="29.0" prefWidth="111.0" text="Descripción:" />
+                                          <Label layoutX="14.0" layoutY="72.0" prefHeight="29.0" prefWidth="111.0" text="Precio:" />
+                                          <TextField fx:id="txtID" layoutX="162.0" layoutY="14.0" prefHeight="25.0" prefWidth="368.0" />
+                                          <TextField fx:id="txtInsumosName" layoutX="162.0" layoutY="41.0" prefHeight="25.0" prefWidth="368.0" />
+                                          <Label layoutX="14.0" layoutY="12.0" prefHeight="29.0" prefWidth="111.0" text="ID" />
+                                          <TextField fx:id="txtPrecioInsumos" layoutX="162.0" layoutY="74.0" prefHeight="25.0" prefWidth="368.0" />
+                                          <TextArea fx:id="txtDescripcionInsumos" layoutX="162.0" layoutY="115.0" prefHeight="95.0" prefWidth="368.0" />
+                                       </children>
+                                    </AnchorPane>
                                  </children>
                               </AnchorPane>
                           </items>
